src/assets/libs/BeliveCore_RTM_Web/envoy.yaml
admin:
  access_log_path: /tmp/admin_access.log
  address:
    socket_address: { address: 0.0.0.0, port_value: 9901 }

static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: { address: 0.0.0.0, port_value: 8080 }
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              config:
                codec_type: auto
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/" }
                          route:
                            cluster: belivertm_service
                            max_grpc_timeout: 0s
                      cors:
                        allow_origin_string_match:
                          - safe_regex:
                              google_re2: {}
                              regex: \*
                        allow_methods: GET, PUT, DELETE, POST, OPTIONS
                        allow_headers: keep-alive,user-agent,cache-control,content-type,content-transfer-encoding,custom-header-1,x-accept-content-transfer-encoding,x-chat-token,x-accept-response-streaming,x-user-agent,x-grpc-web,grpc-timeout
                        max_age: "1728000"
                        expose_headers: custom-header-1,grpc-status,grpc-message,x-chat-token
                        filter_enabled:
                          default_value: {numerator: 100, denominator: HUNDRED}
                          runtime_key: cors.www.enabled
                http_filters:
                  - name: envoy.grpc_web
                  - name: envoy.cors
                  - name: envoy.router
  clusters:
    - name: belivertm_service
      connect_timeout: 10s
      type: logical_dns
      http2_protocol_options: {}
      lb_policy: round_robin
      upstream_connection_options:
        tcp_keepalive:
          keepalive_time: 300
      hosts: [{ socket_address: { address: host.docker.internal, port_value: 9090 }}]
      outlier_detection:
        consecutive_5xx: 1
